tutorial page and Activity done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">GroupProjectTry</string>
+    <string name="app_name">My Tutorial Application</string>
+    <string name="text">SEQUENCE GAME\nHow to play-Click Go.-Focus on the sequence that will aries in front of you.
+        -after the sequence disappear try to remember it  and use the button to rewrite it again.
+    -if you rewrite the right sequence you will win coins and you will go to the next level.
+    -if you fail to rewrite the right sequence you will lose 1 life.</string>
 </resources>
